--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,16 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.12.2",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2",
-    "@tanstack/react-query": "^5.12.2",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.42",
