--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
+    "recharts": "^3.6.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
